fix grid item too small (image-collage)

--- a/music-jukebox/image-collage.css
+++ b/music-jukebox/image-collage.css
@@ -8,19 +8,6 @@ body {
 	margin: 0;
 }
 
- /* Hide scrollbar for Chrome, Safari and Opera */
-#sidebar::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-#sidebar {
-	overflow-x: scroll;
-	overflow-y: hidden;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
 .centered {
 	max-width: 640px;
 	margin: auto;
